feat: update statusId and search (still have some problems)
